--- a/src/Menu/style.css
+++ b/src/Menu/style.css
@@ -36,7 +36,7 @@
     margin-bottom:2.5em;
 }
 .c-works__el {
-    padding:1em 0;
+    padding:.4em 0;
 }
 .c-works__link {
     font-size:2em;
@@ -77,4 +77,9 @@
 }
 .c-menublock--social .c-icons__el {
     padding-right:1.8em;
+}
+@media screen and (min-width: 1400px) {
+    .c-works__el {
+        padding:1em 0;
+    }
 }
